@@ -38,3 +38,5 @@ namespace Avogadro
   }
 
 } // end namespace Avogadro
+
+#include "painter.moc"
